--- a/publications.html
+++ b/publications.html
@@ -39,6 +39,10 @@
       transition: background-color 0.3s ease;
     }
 
+    li:nth-child(even) {
+      background-color: #f9f9f9;
+    }
+
     li:hover {
       background-color: #f0f0f0;
     }
@@ -49,6 +53,11 @@
     }
 
     em {
+      font-weight: bold;
+      color: #333;
+    }
+
+    strong {
       font-weight: bold;
       color: #333;
     }
@@ -66,6 +75,12 @@
     .doi {
       font-size: 0.85rem;
       color: #777;
+      margin-top: 0.5rem;
+      padding: 0.5rem;
+      background-color: #e7f4ff;
+      border: 1px solid #007BFF;
+      display: inline-block;
+      border-radius: 4px;
     }
   </style>
 </head>
@@ -74,7 +89,7 @@
     <h2>List of Peer-Reviewed Publications</h2>
     <ul>
       <li>
-        <strong>Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., Cerezer, F. O., de Oliveira, J. A., ... & Clasen, B. (2025).</strong>
+        <strong>Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., <em>Cerezer, F. O.</em>, de Oliveira, J. A., ... & Clasen, B. (2025).</strong>
         <i>Anthropogenic actions alter the aquatic environment quality: biomonitoring study of a river in Southern Brazil</i>.
         <em>Aquatic Ecology</em>, 59(1), 185-202.
         <a href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">https://doi.org/10.1007/s10452-024-10156-9</a>
@@ -82,7 +97,7 @@
       </li>
 
       <li>
-        <strong>Cerezer, F. O., Campos, A. B., Dambros, C. S., Maestri, R., Bubadué, J. M., & Cáceres, N. C. (2024).</strong>
+        <strong><em>Cerezer, F. O.</em>, Campos, A. B., Dambros, C. S., Maestri, R., Bubadué, J. M., & Cáceres, N. C. (2024).</strong>
         <i>Rodents show darker and redder coloration in warm and rainy environments</i>.
         <em>Global Ecology and Biogeography</em>, 33(3), 426-438.
         <a href="https://doi.org/10.1111/geb.13802" target="_blank">https://doi.org/10.1111/geb.13802</a>
@@ -90,7 +105,7 @@
       </li>
 
       <li>
-        <strong>Cerezer, F. O., Dambros, C. S., Coelho, M. T. P., ... & Graham, C. H. (2023).</strong>
+        <strong><em>Cerezer, F. O.</em>, Dambros, C. S., Coelho, M. T. P., ... & Graham, C. H. (2023).</strong>
         <i>Accelerated body size evolution in upland environments is correlated with recent speciation in South American freshwater fishes</i>.
         <em>Nature Communications</em>, 14, 6070.
         <a href="https://doi.org/10.1038/s41467-023-41812-7" target="_blank">https://doi.org/10.1038/s41467-023-41812-7</a>
@@ -98,7 +113,7 @@
       </li>
 
       <!-- Repeat the same structure for all other publications -->
-
+      
     </ul>
   </div>
 </body>
