--- a/publications.html
+++ b/publications.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Publications</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
       margin: 0;
       padding: 0;
       background-color: #f4f4f4;
     }
 
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #333;
+      text-align: center;
+      padding: 1rem 0;
+      z-index: 1000;
+    }
+
+    nav a {
+      color: white;
+      margin: 0 20px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
     .container {
       width: 80%;
       margin: auto;
-      padding: 2rem 0;
+      padding-top: 6rem; /* Push content down so it doesn’t hide under navbar */
+      padding-bottom: 2rem;
       background-color: #fff;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
@@ -58,17 +80,17 @@
     }
 
     strong {
-      font-weight: normal; /* Ensures other authors are not bolded */
+      font-weight: normal;
       color: #333;
     }
 
-    a {
+    a.doi-link {
       color: #007BFF;
       text-decoration: none;
       font-size: 0.9rem;
     }
 
-    a:hover {
+    a.doi-link:hover {
       text-decoration: underline;
     }
 
@@ -85,6 +107,16 @@
   </style>
 </head>
 <body>
+
+  <!-- NAVIGATION -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="publications.html">Publications</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <!-- CONTENT -->
   <div class="container">
     <h2>List of Peer-Reviewed Publications</h2>
     <ul>
@@ -92,26 +124,19 @@
         <strong>Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., <em>Cerezer, F. O.</em>, de Oliveira, J. A., ... & Clasen, B. (2025).</strong>
         <i>Anthropogenic actions alter the aquatic environment quality: biomonitoring study of a river in Southern Brazil</i>.
         <em>Aquatic Ecology</em>, 59(1), 185-202.
-        <p class="doi">DOI: <a href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">10.1007/s10452-024-10156-9</a></p>
+        <p class="doi">DOI: <a class="doi-link" href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">10.1007/s10452-024-10156-9</a></p>
       </li>
 
       <li>
         <strong><em>Cerezer, F. O.</em>, Campos, A. B., Dambros, C. S., Maestri, R., Bubadué, J. M., & Cáceres, N. C. (2024).</strong>
         <i>Rodents show darker and redder coloration in warm and rainy environments</i>.
         <em>Global Ecology and Biogeography</em>, 33(3), 426-438.
-        <p class="doi">DOI: <a href="https://doi.org/10.1111/geb.13802" target="_blank">10.1111/geb.13802</a></p>
+        <p class="doi">DOI: <a class="doi-link" href="https://doi.org/10.1111/geb.13802" target="_blank">10.1111/geb.13802</a></p>
       </li>
 
-      <li>
-        <strong><em>Cerezer, F. O.</em>, Dambros, C. S., Coelho, M. T. P., ... & Graham, C. H. (2023).</strong>
-        <i>Accelerated body size evolution in upland environments is correlated with recent speciation in South American freshwater fishes</i>.
-        <em>Nature Communications</em>, 14, 6070.
-        <p class="doi">DOI: <a href="https://doi.org/10.1038/s41467-023-41812-7" target="_blank">10.1038/s41467-023-41812-7</a></p>
-      </li>
-
-      <!-- Repeat the same structure for all other publications -->
-
+      <!-- Add more publications below using the same format -->
     </ul>
   </div>
+
 </body>
 </html>
