--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             <h3>2021 - 2022 <i class="fas fa-briefcase"></i></h3>
             <p><strong>Visiting PhD Student</strong><br>
             <i class="fas fa-building"></i> Swiss Federal Research Institute for Forest, Snow and Landscape (WSL), Switzerland<br>
-            <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes</p>
+            <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes (PI Catherine Graham)</p>
 
             <h3>2017 - 2023 <i class="fas fa-briefcase"></i></h3>
             <p><strong>Postgraduate Student Researcher</strong><br>
