--- a/projects.html
+++ b/projects.html
@@ -2,141 +2,211 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Felipe Cerezer | Macroecologist & Evolutionary Biologist</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Felipe Cerezer | Projects</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
+      font-family: Arial, sans-serif;
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom, #f9f9f9, #eef2f3);
-      color: #333;
-      line-height: 1.6;
+      padding: 0;
+      background: linear-gradient(to bottom, #f0f4f8, #ffffff);
     }
 
-    header {
-      background-color: #005f73;
-      color: white;
-      padding: 2em 1em;
+    nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: #333;
       text-align: center;
+      padding: 1rem 0;
+      z-index: 1000;
     }
 
-    header h1 {
-      font-size: 2.5em;
-      margin-bottom: 0.3em;
-    }
-
-    header p {
-      font-size: 1.2em;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-
-    section {
-      padding: 2em 1em;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-
-    .section-title {
-      font-size: 1.8em;
+    nav a {
+      color: white;
+      margin: 0 20px;
+      text-decoration: none;
       font-weight: bold;
-      margin-bottom: 1em;
-      color: #0a4c5f;
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 0.5em;
+      font-size: 1rem;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    .container {
+      width: 80%;
+      margin: auto;
+      padding-top: 6rem;
+      padding-bottom: 2rem;
+    }
+
+    .box {
+      background-color: #fff;
+      padding: 2rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 12px;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 2.8rem;
+      margin-top: 0;
+      color: #222;
+    }
+
+    h2 {
+      font-size: 1.6rem;
+      color: #444;
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+
+    .box p {
+      font-size: 1.1rem;
+      line-height: 1.7;
+      color: #333;
+      text-align: justify;
+      margin: 0;
     }
 
     .project-item {
-      background-color: white;
+      display: flex;
+      align-items: flex-start;
+      gap: 1.5rem;
+      margin-top: 2em;
       border: 1px solid #ddd;
       padding: 1.5em;
-      border-radius: 10px;
-      margin-bottom: 2em;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
+      border-radius: 12px;
+      background-color: #fff;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
 
     .project-item:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
     }
 
     .project-item img {
-      width: 100%;
-      max-height: 200px;
+      width: 220px;
+      height: 220px;
       object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 1em;
+      border-radius: 10px;
+      flex-shrink: 0;
+    }
+
+    .project-item div {
+      flex: 1;
     }
 
     .project-item h3 {
-      color: #005f73;
-      font-size: 1.4em;
+      font-size: 1.4rem;
+      color: #222;
       margin-top: 0;
     }
 
     .project-item p {
-      margin: 0.5em 0 1em;
+      font-size: 1rem;
+      color: #555;
     }
 
     .project-item a {
       text-decoration: none;
-      color: #0077b6;
+      color: #0077cc;
       font-weight: bold;
+      display: inline-block;
+      margin-top: 8px;
     }
 
     .project-item a i {
-      margin-right: 6px;
-      color: #0077b6;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2em 1em;
-      font-size: 0.9em;
-      color: #555;
+      margin-right: 5px;
+      color: #d32f2f;
     }
   </style>
 </head>
-
 <body>
-  <header>
-    <h1>Felipe Cerezer</h1>
-    <p>Macroecologist & Evolutionary Biologist | Exploring biodiversity across time and space</p>
-  </header>
 
-  <section>
-    <div class="section-title">About My Work</div>
-    <div class="project-item">
+  <!-- NAVIGATION -->
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="publications.html">Publications</a>
+    <a href="about.html">About</a>
+  </nav>
+
+  <!-- CONTENT -->
+  <div class="container">
+
+    <!-- Intro Box -->
+    <div class="box">
+      <h1>Research Projects</h1>
+      <h2>Research Highlights</h2>
       <p>
         As a macroecologist and evolutionary biologist, I am keen to understand the evolution of biodiversity—past, present, and future.
         I am particularly interested in how environmental, ecological, and macroevolutionary mechanisms combine to shape the biological
         patterns we see today. I address these questions across a variety of systems and animal groups. Some of the questions I work on include:
       </p>
     </div>
-  </section>
 
-  <section>
-    <div class="section-title">Current Projects</div>
-
+    <!-- Project 1 -->
     <div class="project-item">
-      <img src="speciation.jpeg" alt="Drivers of Speciation" />
-      <h3>What Fuels the Tree of Life? Uncovering the Drivers of Speciation</h3>
-      <p>Exploring how different evolutionary, ecological, and historical factors drive the diversification of species across lineages and regions.</p>
-      <a href="#"><i class="fas fa-link"></i> Learn More</a>
+      <img src="speciation.jpeg" alt="Drivers of Speciation">
+      <div>
+        <h3>What Fuels the Tree of Life? Uncovering the Drivers of Speciation</h3>
+        <p>
+          This project explores variation in speciation rates across clades of terrestrial vertebrates, aiming to identify the
+          ecological, environmental, and life-history factors that drive diversification. Using phylogenetic and comparative methods,
+          it seeks to reveal consistent predictors of high speciation rates and enhance our understanding of biodiversity patterns.
+        </p>
+        <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 1
+        </a><br>
+        <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 2
+        </a>
+      </div>
     </div>
 
+    <!-- Project 2 -->
     <div class="project-item">
-      <img src="extinction.jpeg" alt="Extinction Dynamics" />
-      <h3>Understanding Extinction: Historical Patterns and Modern Risks</h3>
-      <p>Investigating the causes and consequences of species extinction in deep time and contemporary ecosystems.</p>
-      <a href="#"><i class="fas fa-link"></i> Learn More</a>
+      <img src="ldg.jpeg" alt="Species Richness Patterns">
+      <div>
+        <h3>Causes of Species Richness Patterns Across Space, Time, and Clades</h3>
+        <p>
+          This project explores the factors that drive variations in biodiversity across different regions and clades. By examining
+          historical, evolutionary, and ecological factors in innovative ways, this project aims to uncover the secrets behind
+          the dramatic geographic and phylogenetic variation of life on Earth.
+        </p>
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 1
+        </a><br>
+        <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 2
+        </a>
+      </div>
     </div>
-  </section>
 
-  <footer>
-    &copy; 2025 Felipe Cerezer. All rights reserved.
-  </footer>
+    <!-- Project 3 -->
+    <div class="project-item">
+      <img src="color.jpeg" alt="Animal Coloration">
+      <div>
+        <h3>Evolution and Function of Animal Coloration</h3>
+        <p>
+          Coloration is one of the most notable characteristics of animals, yet its adaptive significance remains underexplored.
+          This project investigates the diverse roles and evolutionary origins of coloration, with a particular focus on mammals.
+        </p>
+        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 1
+        </a><br>
+        <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank">
+          <i class="fas fa-file-pdf"></i> View publication 2
+        </a>
+      </div>
+    </div>
+
+  </div>
+
 </body>
 </html>
