--- a/projects.html
+++ b/projects.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Felipe Cerezer | Projects</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <title>Felipe Cerezer – Macroecologist & Evolutionary Biologist</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background: linear-gradient(to bottom, #f0f4f8, #ffffff);
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      padding-top: 60px; /* space for fixed nav */
     }
 
     nav {
@@ -18,131 +18,72 @@
       top: 0;
       width: 100%;
       background-color: #333;
-      text-align: center;
-      padding: 1rem 0;
-      z-index: 1000;
+      padding: 1em;
+      z-index: 999;
     }
 
     nav a {
       color: white;
-      margin: 0 20px;
+      margin-right: 1.5em;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1rem;
     }
 
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      width: 80%;
-      margin: auto;
-      padding-top: 6rem;
-      padding-bottom: 2rem;
-    }
-
-    .box {
-      background-color: #fff;
-      padding: 2rem;
-      margin-bottom: 2rem;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 2.8rem;
-      margin-top: 0;
-      color: #222;
-    }
-
-    h2 {
-      font-size: 1.6rem;
-      color: #444;
-      text-align: center;
-      margin-bottom: 1.5rem;
-    }
-
-    .box p {
-      font-size: 1.1rem;
-      line-height: 1.7;
-      color: #333;
-      text-align: justify;
-      margin: 0;
+    .projects-section {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 2em;
     }
 
     .project-item {
-      display: flex;
-      align-items: flex-start;
-      gap: 1.5rem;
-      margin-top: 2em;
       border: 1px solid #ddd;
       padding: 1.5em;
-      border-radius: 12px;
+      border-radius: 8px;
       background-color: #fff;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .project-item:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+      margin-top: 2em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     .project-item img {
-      width: 220px;
-      height: 220px;
+      width: 100%;
+      max-height: 200px;
       object-fit: cover;
       border-radius: 10px;
-      flex-shrink: 0;
-    }
-
-    .project-item div {
-      flex: 1;
+      margin-bottom: 1em;
     }
 
     .project-item h3 {
-      font-size: 1.4rem;
-      color: #222;
       margin-top: 0;
+      text-align: center;
     }
 
     .project-item p {
-      font-size: 1rem;
-      color: #555;
+      text-align: justify;
     }
 
     .project-item a {
-      text-decoration: none;
+      display: block;
+      margin-top: 1em;
       color: #0077cc;
+      text-decoration: none;
       font-weight: bold;
-      display: inline-block;
-      margin-top: 8px;
-    }
-
-    .project-item a i {
-      margin-right: 5px;
-      color: #d32f2f;
     }
   </style>
 </head>
-<body>
 
-  <!-- NAVIGATION -->
+<body>
   <nav>
-    <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
-    <a href="publications.html">Publications</a>
-    <a href="about.html">About</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#publications">Publications</a>
+    <a href="#contact">Contact</a>
   </nav>
 
-  <!-- CONTENT -->
-  <div class="container">
-
-    <!-- Intro Box -->
-    <div class="box">
-      <h1>Research Projects</h1>
-      <h2>Research Highlights</h2>
+  <section class="projects-section" id="about">
+    <!-- Intro box -->
+    <div class="project-item">
       <p>
         As a macroecologist and evolutionary biologist, I am keen to understand the evolution of biodiversity—past, present, and future.
         I am particularly interested in how environmental, ecological, and macroevolutionary mechanisms combine to shape the biological
@@ -155,58 +96,30 @@
       <img src="speciation.jpeg" alt="Drivers of Speciation">
       <div>
         <h3>What Fuels the Tree of Life? Uncovering the Drivers of Speciation</h3>
-        <p>
-          This project explores variation in speciation rates across clades of terrestrial vertebrates, aiming to identify the
-          ecological, environmental, and life-history factors that drive diversification. Using phylogenetic and comparative methods,
-          it seeks to reveal consistent predictors of high speciation rates and enhance our understanding of biodiversity patterns.
-        </p>
-        <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 1
-        </a><br>
-        <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 2
-        </a>
+        <p>Exploring how different evolutionary, ecological, and historical factors drive the diversification of species across lineages and regions.</p>
+        <a href="https://doi.org/10.xxxx/speciation-paper">📄 Publication</a>
       </div>
     </div>
 
     <!-- Project 2 -->
     <div class="project-item">
-      <img src="ldg.jpeg" alt="Species Richness Patterns">
+      <img src="extinction.jpeg" alt="Extinction Dynamics">
       <div>
-        <h3>Causes of Species Richness Patterns Across Space, Time, and Clades</h3>
-        <p>
-          This project explores the factors that drive variations in biodiversity across different regions and clades. By examining
-          historical, evolutionary, and ecological factors in innovative ways, this project aims to uncover the secrets behind
-          the dramatic geographic and phylogenetic variation of life on Earth.
-        </p>
-        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 1
-        </a><br>
-        <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 2
-        </a>
+        <h3>Understanding Extinction: Historical Patterns and Modern Risks</h3>
+        <p>Investigating the causes and consequences of species extinction in deep time and contemporary ecosystems.</p>
+        <a href="https://doi.org/10.xxxx/extinction-paper">📄 Publication</a>
       </div>
     </div>
 
     <!-- Project 3 -->
     <div class="project-item">
-      <img src="color.jpeg" alt="Animal Coloration">
+      <img src="niche.jpeg" alt="Niche Evolution and Environmental Change">
       <div>
-        <h3>Evolution and Function of Animal Coloration</h3>
-        <p>
-          Coloration is one of the most notable characteristics of animals, yet its adaptive significance remains underexplored.
-          This project investigates the diverse roles and evolutionary origins of coloration, with a particular focus on mammals.
-        </p>
-        <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 1
-        </a><br>
-        <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank">
-          <i class="fas fa-file-pdf"></i> View publication 2
-        </a>
+        <h3>Environmental Change and Niche Evolution in Tetrapods</h3>
+        <p>Evaluating how climatic and environmental shifts impact ecological niche evolution and species' distributions through time.</p>
+        <a href="https://doi.org/10.xxxx/niche-paper">📄 Publication</a>
       </div>
     </div>
-
-  </div>
-
+  </section>
 </body>
 </html>
