--- a/projects.html
+++ b/projects.html
@@ -10,29 +10,39 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
-      padding-top: 60px; /* space for fixed nav */
+      padding-top: 70px; /* space for fixed nav */
     }
 
     nav {
       position: fixed;
       top: 0;
+      left: 0;
       width: 100%;
       background-color: #333;
       padding: 1em;
       z-index: 999;
+      display: flex;
+      justify-content: center;
     }
 
     nav a {
       color: white;
-      margin-right: 1.5em;
+      margin: 0 1.5em;
       text-decoration: none;
       font-weight: bold;
     }
 
-    .projects-section {
+    .section-container {
       max-width: 1000px;
       margin: 0 auto;
       padding: 2em;
+    }
+
+    h2 {
+      text-align: center;
+      margin-top: 1.5em;
+      font-size: 1.8em;
+      color: #333;
     }
 
     .project-item {
@@ -70,6 +80,19 @@
       text-decoration: none;
       font-weight: bold;
     }
+
+    .intro-box {
+      border: 1px solid #ddd;
+      padding: 1.5em;
+      border-radius: 8px;
+      background-color: #fff;
+      margin-top: 2em;
+    }
+
+    .intro-box p {
+      text-align: justify;
+      margin: 0;
+    }
   </style>
 </head>
 
@@ -81,15 +104,19 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <section class="projects-section" id="about">
-    <!-- Intro box -->
-    <div class="project-item">
+  <section class="section-container" id="about">
+    <h2>About My Work</h2>
+    <div class="intro-box">
       <p>
         As a macroecologist and evolutionary biologist, I am keen to understand the evolution of biodiversity—past, present, and future.
         I am particularly interested in how environmental, ecological, and macroevolutionary mechanisms combine to shape the biological
         patterns we see today. I address these questions across a variety of systems and animal groups. Some of the questions I work on include:
       </p>
     </div>
+  </section>
+
+  <section class="section-container" id="projects">
+    <h2>Current Projects</h2>
 
     <!-- Project 1 -->
     <div class="project-item">
